Align response error code fields
